fix:把依照SubRouteUID & RouteUID 拆分的路線片段合併，並黏貼其路線名稱

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -338,10 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4658bda7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_15672\\512393637.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_15672\\512393637.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
+     ]
+    }
+   ],
    "source": [
     "# 01-01 讀取站序xml\n",
     "\n",
@@ -358,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e0a78a03",
    "metadata": {},
    "outputs": [],
@@ -376,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "164ae355",
    "metadata": {},
    "outputs": [],
@@ -387,10 +398,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5b4f21eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "只在 df_route 出現的 RouteUID：0\n",
+      "只在 df_seq 出現的 RouteUID：10\n",
+      "兩邊都有的 RouteUID：1530\n",
+      "-----------\n",
+      "只在 df_route 出現的 SubRouteUID：1\n",
+      "只在 df_seq 出現的 SubRouteUID：1372\n",
+      "兩邊都有的 SubRouteUID：814\n"
+     ]
+    }
+   ],
    "source": [
     "# 02 檢查路線\n",
     "text_routeUID, only_in_route_routeUID, only_in_seq_routeUID, in_both_routeUID  =compare_column_values(df_route, df_seq, 'RouteUID', name_a='df_route', name_b='df_seq')\n",
@@ -403,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0dda771e",
    "metadata": {},
    "outputs": [],
@@ -423,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "c2e20da0",
    "metadata": {},
    "outputs": [],
@@ -452,25 +477,294 @@
     "                                       seq_lng_col='PositionLon')\n",
     "\n",
     "gdf_routesegment_select.rename(columns = {'ID':'SubRouteUID'}, inplace=True)\n",
-    "\n",
-    "\n",
-    "\n"
+    "gdf_routesegment_select = pd.merge(gdf_routesegment_select,\n",
+    "                                   gdf_seq_selectbySubRouteUID[['RouteUID', 'RouteName_Zh' ,'SubRouteUID', 'SubRouteName_Zh']].drop_duplicates(subset=['SubRouteUID']),\n",
+    "                                   on='SubRouteUID', how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ee582b6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 排除SubRouteUID一致的路線，再針對RouteUID一致的路線進行處理\n",
-    "\n"
+    "\n",
+    "gdf_route_others = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)==False]\n",
+    "gdf_seq_others = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID) == False]\n",
+    "\n",
+    "gdf_snapstop_others = snap_points_to_line(gdf_seq_others, gdf_route_others,\n",
+    "                                          route_id_col='RouteUID',\n",
+    "                                          route_direction_col='Direction',\n",
+    "                                          seq_id_col='RouteUID',\n",
+    "                                          seq_direction_col='Direction',\n",
+    "                                          seq_lat_col='PositionLat',\n",
+    "                                          seq_lng_col='PositionLon')\n",
+    "\n",
+    "gdf_routesegment_others = split_routes(gdf_route_others, gdf_snapstop_others,\n",
+    "                                       route_id_col='RouteUID',\n",
+    "                                       route_direction_col='Direction',\n",
+    "                                       seq_id_col='RouteUID',\n",
+    "                                       seq_direction_col='Direction',\n",
+    "                                       seq_seq_col='StopSequence',\n",
+    "                                       seq_lat_col='PositionLat',\n",
+    "                                       seq_lng_col='PositionLon')\n",
+    "\n",
+    "gdf_routesegment_others.rename(columns = {'ID':'RouteUID'}, inplace=True)\n",
+    "gdf_routesegment_others = gdf_routesegment_others.merge(gdf_route_others[['RouteUID', 'RouteName_Zh']].drop_duplicates(), on='RouteUID', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a86a4600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_routesegment = pd.concat([gdf_routesegment_select, gdf_routesegment_others], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd694be4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SubRouteUID</th>\n",
+       "      <th>Direction</th>\n",
+       "      <th>StartSeq</th>\n",
+       "      <th>EndSeq</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>RouteUID</th>\n",
+       "      <th>RouteName_Zh</th>\n",
+       "      <th>SubRouteName_Zh</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>LINESTRING (121.73873 25.13125, 121.73869 25.1...</td>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>3044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>LINESTRING (121.7403 25.12984, 121.74025 25.12...</td>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>3044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>LINESTRING (121.73697 25.13025, 121.73703 25.1...</td>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>3044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>LINESTRING (121.73904 25.1331, 121.73909 25.13...</td>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>3044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>LINESTRING (121.73996 25.13453, 121.74 25.1345...</td>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>3044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114134</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>41</td>\n",
+       "      <td>LINESTRING (121.55087 25.0244, 121.55178 25.02...</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114135</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>42</td>\n",
+       "      <td>LINESTRING (121.55358 25.02329, 121.55462 25.0...</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114136</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>43</td>\n",
+       "      <td>LINESTRING (121.55596 25.02108, 121.55679 25.0...</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114137</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43</td>\n",
+       "      <td>44</td>\n",
+       "      <td>LINESTRING (121.55783 25.01929, 121.55837 25.0...</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114138</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>45</td>\n",
+       "      <td>LINESTRING (121.55854 25.01827, 121.55871 25.0...</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>敦化幹線</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114139 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       SubRouteUID  Direction  StartSeq  EndSeq  \\\n",
+       "0        KEE015501          0         1       2   \n",
+       "1        KEE015501          0         2       3   \n",
+       "2        KEE015501          0         3       4   \n",
+       "3        KEE015501          0         4       5   \n",
+       "4        KEE015501          0         5       6   \n",
+       "...            ...        ...       ...     ...   \n",
+       "114134         NaN          1        40      41   \n",
+       "114135         NaN          1        41      42   \n",
+       "114136         NaN          1        42      43   \n",
+       "114137         NaN          1        43      44   \n",
+       "114138         NaN          1        44      45   \n",
+       "\n",
+       "                                                 geometry RouteUID  \\\n",
+       "0       LINESTRING (121.73873 25.13125, 121.73869 25.1...  KEE0155   \n",
+       "1       LINESTRING (121.7403 25.12984, 121.74025 25.12...  KEE0155   \n",
+       "2       LINESTRING (121.73697 25.13025, 121.73703 25.1...  KEE0155   \n",
+       "3       LINESTRING (121.73904 25.1331, 121.73909 25.13...  KEE0155   \n",
+       "4       LINESTRING (121.73996 25.13453, 121.74 25.1345...  KEE0155   \n",
+       "...                                                   ...      ...   \n",
+       "114134  LINESTRING (121.55087 25.0244, 121.55178 25.02...   TPE810   \n",
+       "114135  LINESTRING (121.55358 25.02329, 121.55462 25.0...   TPE810   \n",
+       "114136  LINESTRING (121.55596 25.02108, 121.55679 25.0...   TPE810   \n",
+       "114137  LINESTRING (121.55783 25.01929, 121.55837 25.0...   TPE810   \n",
+       "114138  LINESTRING (121.55854 25.01827, 121.55871 25.0...   TPE810   \n",
+       "\n",
+       "       RouteName_Zh SubRouteName_Zh  \n",
+       "0              3044            3044  \n",
+       "1              3044            3044  \n",
+       "2              3044            3044  \n",
+       "3              3044            3044  \n",
+       "4              3044            3044  \n",
+       "...             ...             ...  \n",
+       "114134         敦化幹線             NaN  \n",
+       "114135         敦化幹線             NaN  \n",
+       "114136         敦化幹線             NaN  \n",
+       "114137         敦化幹線             NaN  \n",
+       "114138         敦化幹線             NaN  \n",
+       "\n",
+       "[114139 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_routesegment.reindex(columns = ['RouteUID', 'RouteName_Zh', 'SubRouteUID', 'SubRouteName_Zh', 'Direction', 'StartSeq', 'EndSeq', 'geometry'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b406b592",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66247"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gdf_routesegment_others)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "bf6c5b15",
    "metadata": {},
    "outputs": [],
@@ -484,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0b8146b0",
    "metadata": {},
    "outputs": [],
