fix : 加入main() 已呼叫完整功能列表

--- a/01_TDX資料下載.ipynb
+++ b/01_TDX資料下載.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "f2def25c",
-   "metadata": {},
-   "source": [
-    "# TDX 下載函數"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "cb00210c",
    "metadata": {},
    "outputs": [],
@@ -18,10 +10,8 @@
     "import os\n",
     "import requests\n",
     "import json\n",
-    "\n",
-    "from datetime import datetime # 輸出下載日期用\n",
     "import time # 下載間隔，避免短時間下載被拒絕\n",
-    "\n",
+    "from datetime import datetime # 輸出下載日期用\n",
     "\n",
     "def tdx_data_download(app_id, app_key, url, output_folder, output_file_name):\n",
     "    \"\"\"\n",
@@ -89,53 +79,49 @@
     "    app_id = info_table[info_table['Item'] == 'app_id']['Value'].iloc[0]\n",
     "    app_key = info_table[info_table['Item'] == 'app_key']['Value'].iloc[0]\n",
     "\n",
-    "    return app_id, app_key\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4bb17b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app_id, app_key = get_app_credentials(r\"D:\\常用Tool\\tdx帳密.txt\") # 讀取TDX帳密 也可以自己手key in\n",
-    "busstopseq_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
-    "busroute_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\"))\n",
+    "    return app_id, app_key\n",
     "\n",
-    "selectcity = {'新北市':'NewTaipei', '臺北市':'Taipei', '基隆市':'Keelung', '桃園市':'Taoyuan'}\n",
-    "downloaddate = datetime.today().strftime(\"%Y-%m-%d\")\n",
+    "def main():\n",
+    "    app_id, app_key = get_app_credentials(r\"D:\\常用Tool\\tdx帳密.txt\") # 讀取TDX帳密 也可以自己手key in\n",
+    "    busstopseq_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
+    "    busroute_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\"))\n",
     "\n",
-    "'''下載公車站序資料'''\n",
-    "for city, city_en in selectcity.items():\n",
-    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
-    "    output_folder = busstopseq_folder\n",
-    "    output_file_name = f\"公車站序資料_{city}_{downloaddate}.xml\"\n",
-    "    tdx_data_download(\n",
-    "        app_id = app_id,\n",
-    "        app_key = app_key,\n",
-    "        url = url,\n",
-    "        output_folder = output_folder,\n",
-    "        output_file_name = output_file_name\n",
-    "        )\n",
-    "    \n",
-    "    time.sleep(60)\n",
+    "    selectcity = {'新北市':'NewTaipei', '臺北市':'Taipei', '基隆市':'Keelung', '桃園市':'Taoyuan'}\n",
+    "    downloaddate = datetime.today().strftime(\"%Y-%m-%d\")\n",
     "\n",
-    "'''下載公車路線shp資料'''\n",
-    "for city, city_en in selectcity.items():\n",
-    "    # url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
-    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/Shape/City/{city_en}?%24format=XML\"\n",
-    "    output_folder = busroute_folder\n",
-    "    output_file_name = f\"市區公車路線資料_{city}_{downloaddate}.xml\"\n",
-    "    tdx_data_download(\n",
-    "        app_id = app_id,\n",
-    "        app_key = app_key,\n",
-    "        url = url,\n",
-    "        output_folder = output_folder,\n",
-    "        output_file_name = output_file_name\n",
-    "        )\n",
-    "    \n",
-    "    time.sleep(60)"
+    "    '''下載公車站序資料'''\n",
+    "    for city, city_en in selectcity.items():\n",
+    "        url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
+    "        output_folder = busstopseq_folder\n",
+    "        output_file_name = f\"公車站序資料_{city}_{downloaddate}.xml\"\n",
+    "        tdx_data_download(\n",
+    "            app_id = app_id,\n",
+    "            app_key = app_key,\n",
+    "            url = url,\n",
+    "            output_folder = output_folder,\n",
+    "            output_file_name = output_file_name\n",
+    "            )\n",
+    "        \n",
+    "        time.sleep(60)\n",
+    "\n",
+    "    '''下載公車路線shp資料'''\n",
+    "    for city, city_en in selectcity.items():\n",
+    "        # url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
+    "        url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/Shape/City/{city_en}?%24format=XML\"\n",
+    "        output_folder = busroute_folder\n",
+    "        output_file_name = f\"市區公車路線資料_{city}_{downloaddate}.xml\"\n",
+    "        tdx_data_download(\n",
+    "            app_id = app_id,\n",
+    "            app_key = app_key,\n",
+    "            url = url,\n",
+    "            output_folder = output_folder,\n",
+    "            output_file_name = output_file_name\n",
+    "            )\n",
+    "        \n",
+    "        time.sleep(60)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
