feat:修正slit_routes 不必要的參數

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -234,160 +234,7 @@
     "    return output_text, only_in_a, only_in_b, in_both\n",
     "\n",
     "\n",
-    "# 03 拆分路線\n",
-    "# def snap_points_to_line(stops_gdf, routes_gdf, \n",
-    "#                         route_id_col, route_direction_col, \n",
-    "#                         seq_id_col, seq_direction_col, \n",
-    "#                         seq_lat_col, seq_lng_col):\n",
-    "#     \"\"\"\n",
-    "#     將公車站點 (stops_gdf) 投影到公車路線 (routes_gdf) 上，並動態帶入欄位名稱。\n",
-    "#     Parameters:\n",
-    "#         stops_gdf (GeoDataFrame): 包含公車站點的 GeoDataFrame。\n",
-    "#         routes_gdf (GeoDataFrame): 包含公車路線的 GeoDataFrame。\n",
-    "#         route_id_col (str): 路線名稱欄位名稱。\n",
-    "#         route_direction_col (str): 路線方向欄位名稱。\n",
-    "#         seq_id_col (str): 站點路線名稱欄位名稱。\n",
-    "#         seq_direction_col (str): 站點方向欄位名稱。\n",
-    "#         seq_lat_col (str): 站點緯度欄位名稱。\n",
-    "#         seq_lng_col (str): 站點經度欄位名稱。\n",
-    "#     Returns:\n",
-    "#         GeoDataFrame: 更新後的公車站點 GeoDataFrame，其中 geometry 已投影到路線。\n",
-    "#     \"\"\"\n",
-    "#     snapped_points = []\n",
-    "\n",
-    "#     for _, stop in stops_gdf.iterrows():\n",
-    "#         # 找到與站點路線名稱和方向相符的路線\n",
-    "#         matching_route = routes_gdf[(routes_gdf[route_id_col] == stop[seq_id_col]) & \n",
-    "#                                     (routes_gdf[route_direction_col] == stop[seq_direction_col])]\n",
-    "\n",
-    "#         if not matching_route.empty:\n",
-    "#             # 取出該路線的 geometry\n",
-    "#             line = matching_route.iloc[0].geometry\n",
-    "#             # 計算站點投影到該路線的最近點\n",
-    "#             snapped_point = line.interpolate(line.project(stop.geometry))\n",
-    "#             snapped_points.append(snapped_point)\n",
-    "#         else:\n",
-    "#             # 如果沒有匹配的路線，保持原點\n",
-    "#             snapped_points.append(stop.geometry)\n",
-    "\n",
-    "#     # 更新站點的 geometry\n",
-    "#     stops_gdf = stops_gdf.copy()\n",
-    "#     stops_gdf['geometry'] = snapped_points\n",
-    "#     stops_gdf[seq_lat_col] = stops_gdf.geometry.y\n",
-    "#     stops_gdf[seq_lng_col] = stops_gdf.geometry.x\n",
-    "#     return stops_gdf\n",
-    "\n",
-    "# def split_routes(busroute_select, \n",
-    "#                  seq_select,\n",
-    "#                  route_id_col='RouteName',\n",
-    "#                  route_direction_col='Direction',\n",
-    "#                  seq_id_col='RouteName',\n",
-    "#                  seq_direction_col='Direction',\n",
-    "#                  seq_seq_col='Seq',\n",
-    "#                  seq_lat_col='Lat',\n",
-    "#                  seq_lng_col='Lon'):\n",
-    "#     \"\"\"\n",
-    "#     將公車路線 (busroute_select) 依據提供的站序 (seq_select) 上，分為數段的shp。\n",
-    "#     Parameters:\n",
-    "#         busroute_select (GeoDataFrame): 包含公車路線名稱的 GeoDataFrame。\n",
-    "#         seq_select (DataFrame): 包含公車路線站序的 DataFrame。\n",
-    "#         route_id_col (str): 路線名稱欄位名稱。\n",
-    "#         route_direction_col (str): 路線方向欄位名稱。\n",
-    "#         seq_id_col (str): 站點路線名稱欄位名稱。\n",
-    "#         seq_direction_col (str): 站點方向欄位名稱。\n",
-    "#         seq_seq_col (str): 站點站序欄位名稱。\n",
-    "#         seq_lat_col (str): 站點緯度欄位名稱。\n",
-    "#         seq_lng_col (str): 站點經度欄位名稱。\n",
-    "#     Returns:\n",
-    "#         GeoDataFrame: 更新後的公車站點 GeoDataFrame，其中 geometry 已投影到路線。\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     output = []\n",
-    "\n",
-    "#     for _, route in busroute_select.iterrows():\n",
-    "#         route_id = route[route_id_col]\n",
-    "#         direction = route[route_direction_col]\n",
-    "#         geometry = route['geometry']\n",
-    "\n",
-    "#         # 過濾對應路線與方向的站點\n",
-    "#         stops = seq_select[(seq_select[seq_id_col] == route_id) & \n",
-    "#                            (seq_select[seq_direction_col] == direction)].sort_values(seq_seq_col)\n",
-    "\n",
-    "#         # 確保站點順序對應於路線\n",
-    "#         stop_coords = [(row[seq_lng_col], row[seq_lat_col]) for _, row in stops.iterrows()]\n",
-    "\n",
-    "#         for i in range(len(stop_coords) - 1):\n",
-    "#             start_point = Point(stop_coords[i])\n",
-    "#             end_point = Point(stop_coords[i + 1])\n",
-    "\n",
-    "#             # 找到站點在路線中的比例位置\n",
-    "#             start_distance = geometry.project(start_point)\n",
-    "#             end_distance = geometry.project(end_point)\n",
-    "\n",
-    "#             # 提取路線幾何分段\n",
-    "#             segment = substring(geometry, start_distance, end_distance)\n",
-    "\n",
-    "#             output.append({\n",
-    "#                 'ID': route_id,\n",
-    "#                 'Direction': direction,\n",
-    "#                 'StartSeq': stops.iloc[i][seq_seq_col],\n",
-    "#                 'EndSeq': stops.iloc[i + 1][seq_seq_col],\n",
-    "#                 'geometry': segment\n",
-    "#             })\n",
-    "\n",
-    "#     return gpd.GeoDataFrame(output)\n",
-    "\n",
-    "# def snap_points_to_line(\n",
-    "#     stops_gdf, routes_gdf,\n",
-    "#     route_id_col, route_direction_col,\n",
-    "#     seq_id_col, seq_direction_col,\n",
-    "#     seq_lat_col, seq_lng_col,\n",
-    "#     route_geom_col=\"geometry\",\n",
-    "#     eps=1e-6):\n",
-    "\n",
-    "#     # 確保兩邊 CRS 一致\n",
-    "#     if stops_gdf.crs != routes_gdf.crs:\n",
-    "#         stops_gdf = stops_gdf.to_crs(routes_gdf.crs)\n",
-    "\n",
-    "#     snapped_points = []\n",
-    "#     measures = []\n",
-    "\n",
-    "#     for _, stop in stops_gdf.iterrows():\n",
-    "#         # 依路線與方向配對\n",
-    "#         matching = routes_gdf[\n",
-    "#             (routes_gdf[route_id_col] == stop[seq_id_col]) &\n",
-    "#             (routes_gdf[route_direction_col] == stop[seq_direction_col])\n",
-    "#         ]\n",
-    "\n",
-    "#         if matching.empty:\n",
-    "#             # 沒有匹配路線 — 保留原點，m 設為 None\n",
-    "#             snapped_points.append(stop.geometry)\n",
-    "#             measures.append(None)\n",
-    "#             continue\n",
-    "\n",
-    "#         geom = matching.iloc[0][route_geom_col]\n",
-    "\n",
-    "#         # 若是 MultiLineString，先合併（盡量得到單一 LineString）\n",
-    "#         try:\n",
-    "#             merged = linemerge(geom)\n",
-    "#         except Exception:\n",
-    "#             merged = geom\n",
-    "\n",
-    "#         line = merged\n",
-    "\n",
-    "#         # 計算投影與插值\n",
-    "#         m = line.project(stop.geometry)\n",
-    "#         snapped = line.interpolate(m)\n",
-    "\n",
-    "#         snapped_points.append(snapped)\n",
-    "#         measures.append(float(m))\n",
-    "\n",
-    "#     out = stops_gdf.copy()\n",
-    "#     out[\"geometry\"] = snapped_points\n",
-    "#     out[seq_lat_col] = out.geometry.y\n",
-    "#     out[seq_lng_col] = out.geometry.x\n",
-    "#     out[\"__m__\"] = measures   # 之後 split 用\n",
-    "#     return out\n",
+    "# 03 拆分路線   \n",
     "\n",
     "def snap_points_to_line(\n",
     "    stops_gdf, routes_gdf,\n",
@@ -448,8 +295,6 @@
     "    seq_id_col='RouteName',\n",
     "    seq_direction_col='Direction',\n",
     "    seq_seq_col='Seq',\n",
-    "    seq_lat_col='Lat',\n",
-    "    seq_lng_col='Lon',\n",
     "    route_geom_col='geometry',\n",
     "    eps=1e-6 ):\n",
     "    \"\"\"\n",
@@ -542,12 +387,13 @@
     "                # Point / 空幾何都丟掉\n",
     "                continue\n",
     "\n",
-    "    return gpd.GeoDataFrame(output, geometry=\"geometry\", crs=getattr(busroute_select, \"crs\", None))"
+    "    return gpd.GeoDataFrame(output, geometry=\"geometry\", crs=getattr(busroute_select, \"crs\", None))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "4658bda7",
    "metadata": {},
    "outputs": [
@@ -555,9 +401,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23612\\3909718018.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\746605869.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23612\\3909718018.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\746605869.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
      ]
     }
@@ -578,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e0a78a03",
    "metadata": {},
    "outputs": [],
@@ -596,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "164ae355",
    "metadata": {},
    "outputs": [],
@@ -607,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "5b4f21eb",
    "metadata": {},
    "outputs": [
@@ -637,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0dda771e",
    "metadata": {},
    "outputs": [],
@@ -657,28 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ace285f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 03-02 拆分路線\n",
-    "routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\"))\n",
-    "\n",
-    "# 先處理SubRouteUID 一致的路線\n",
-    "# 將公車站序點位投影到路線上\n",
-    "gdf_snapstop_select = snap_points_to_line(gdf_seq_selectbySubRouteUID, gdf_route_selectbySubRouteUID,\n",
-    "                                          route_id_col='SubRouteUID',\n",
-    "                                          route_direction_col='Direction',\n",
-    "                                          seq_id_col='SubRouteUID',\n",
-    "                                          seq_direction_col='Direction',\n",
-    "                                          seq_lat_col='PositionLat',\n",
-    "                                          seq_lng_col='PositionLon')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "c2e20da0",
    "metadata": {},
    "outputs": [],
@@ -702,9 +527,7 @@
     "                                       route_direction_col='Direction',\n",
     "                                       seq_id_col='SubRouteUID',\n",
     "                                       seq_direction_col='Direction',\n",
-    "                                       seq_seq_col='StopSequence',\n",
-    "                                       seq_lat_col='PositionLat',\n",
-    "                                       seq_lng_col='PositionLon')\n",
+    "                                       seq_seq_col='StopSequence')\n",
     "\n",
     "gdf_routesegment_select.rename(columns = {'ID':'SubRouteUID'}, inplace=True)\n",
     "gdf_routesegment_select = pd.merge(gdf_routesegment_select,\n",
@@ -729,9 +552,7 @@
     "                                       route_direction_col='Direction',\n",
     "                                       seq_id_col='RouteUID',\n",
     "                                       seq_direction_col='Direction',\n",
-    "                                       seq_seq_col='StopSequence',\n",
-    "                                       seq_lat_col='PositionLat',\n",
-    "                                       seq_lng_col='PositionLon')\n",
+    "                                       seq_seq_col='StopSequence')\n",
     "\n",
     "gdf_routesegment_others.rename(columns = {'ID':'RouteUID'}, inplace=True)\n",
     "gdf_routesegment_others = gdf_routesegment_others.merge(gdf_route_others[['RouteUID', 'RouteName_Zh']].drop_duplicates(), on='RouteUID', how='left')\n",
@@ -742,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "e6bf596e",
    "metadata": {},
    "outputs": [
@@ -782,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "bf6c5b15",
    "metadata": {},
    "outputs": [
@@ -790,7 +611,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23612\\1199398256.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\1199398256.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  gef_routesegment.to_file(routesegment_filepath,\n",
       "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
       "  write(\n",
