feat:加入檢查參數

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,39 @@
     "                continue\n",
     "\n",
     "    return gpd.GeoDataFrame(output, geometry=\"geometry\", crs=getattr(busroute_select, \"crs\", None))\n",
-    "\n"
+    "\n",
+    "def inspect_route_geometries(gdf):\n",
+    "    \"\"\"\n",
+    "    檢查 GeoDataFrame 的 geometry 型別，並回傳文字報告（string）。\n",
+    "    不做 print，只組成 text 回傳。\n",
+    "    \"\"\"\n",
+    "\n",
+    "    lines = []  # 用來存文字行\n",
+    "\n",
+    "    lines.append(\"幾何型別分佈：\")\n",
+    "    geom_counts = gdf.geom_type.value_counts(dropna=False)\n",
+    "    lines.append(str(geom_counts))\n",
+    "\n",
+    "    # 找出非 LineString / MultiLineString，或空幾何、NaN\n",
+    "    mask_bad = (\n",
+    "        ~gdf.geom_type.isin([\"LineString\", \"MultiLineString\"])\n",
+    "        | gdf.geometry.isna()\n",
+    "        | gdf.is_empty\n",
+    "    )\n",
+    "    bad = gdf[mask_bad]\n",
+    "\n",
+    "    lines.append(f\"\\n疑似有問題的筆數：{len(bad)}\")\n",
+    "\n",
+    "    bad_geom_types = bad.geom_type.value_counts(dropna=False).rename(\"bad_geom_types\")\n",
+    "    lines.append(str(bad_geom_types))\n",
+    "\n",
+    "    # 前幾筆索引\n",
+    "    bad_indices = list(bad.index[:10])\n",
+    "    lines.append(f\"\\n前 10 筆問題索引：{bad_indices}\")\n",
+    "\n",
+    "    # 將所有行組成字串\n",
+    "    text_report = \"\\n\".join(lines)\n",
+    "    return text_report\n"
    ]
   },
   {
@@ -503,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c2e20da0",
    "metadata": {},
    "outputs": [],
@@ -558,97 +590,14 @@
     "gdf_routesegment_others = gdf_routesegment_others.merge(gdf_route_others[['RouteUID', 'RouteName_Zh']].drop_duplicates(), on='RouteUID', how='left')\n",
     "\n",
     "gdf_routesegment = pd.concat([gdf_routesegment_select, gdf_routesegment_others], ignore_index=True)\n",
-    "gef_routesegment = gdf_routesegment.reindex(columns = ['RouteUID', 'RouteName_Zh', 'SubRouteUID', 'SubRouteName_Zh', 'Direction', 'StartSeq', 'EndSeq', 'geometry'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e6bf596e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "幾何型別分佈：\n",
-      "LineString    103681\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "疑似有問題的筆數：0\n",
-      "Series([], Name: bad_geom_types, dtype: int64)\n",
-      "\n",
-      "前 10 筆問題索引： []\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
+    "gef_routesegment = gdf_routesegment.reindex(columns = ['RouteUID', 'RouteName_Zh', 'SubRouteUID', 'SubRouteName_Zh', 'Direction', 'StartSeq', 'EndSeq', 'geometry'])\n",
     "\n",
-    "gdf = gdf_routesegment.copy()  # 簡寫\n",
+    "print(inspect_route_geometries(gef_routesegment))\n",
     "\n",
-    "print(\"幾何型別分佈：\")\n",
-    "print(gdf.geom_type.value_counts(dropna=False))\n",
-    "\n",
-    "# 可能導致錯誤的幾何：非線、空幾何、NaN\n",
-    "mask_bad = ~gdf.geom_type.isin([\"LineString\", \"MultiLineString\"]) | gdf.is_empty | gdf.geometry.isna()\n",
-    "bad = gdf[mask_bad]\n",
-    "\n",
-    "print(f\"\\n疑似有問題的筆數：{len(bad)}\")\n",
-    "print(bad.geom_type.value_counts(dropna=False).rename(\"bad_geom_types\"))\n",
-    "\n",
-    "# 列出前幾筆問題索引看一下\n",
-    "print(\"\\n前 10 筆問題索引：\", list(bad.index[:10]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "bf6c5b15",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\1199398256.py:4: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  gef_routesegment.to_file(routesegment_filepath,\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
-      "  write(\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'RouteName_Zh' to 'RouteName_'\n",
-      "  ogr_write(\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
-      "  ogr_write(\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteName_Zh' to 'SubRouteNa'\n",
-      "  ogr_write(\n"
-     ]
-    }
-   ],
-   "source": [
     "# 輸出\n",
     "routesegment_filepath = os.path.join(routesegment_folder, '市區公車拆分.shp')\n",
-    "\n",
     "gef_routesegment.to_file(routesegment_filepath, \n",
-    "                         index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b8146b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_GTSFseq = pd.read_csv(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\其他分析資料\\TDX_GTFS_20250617\\shapes.txt\")\n",
-    "# df_GTSFseq['RouteUID'] = df_GTSFseq['shape_id'].str.split('_').str[0]\n",
-    "# df_GTSFseq['Direction'] = df_GTSFseq['shape_id'].str.split('_').str[1]\n",
-    "# df_GTSFseq.rename(columns = {'shape_id':'ShapeUID', \n",
-    "#                             'shape_pt_lat':'PositionLat',\n",
-    "#                             'shape_pt_lon':'PositionLon',\n",
-    "#                             'shape_pt_sequence':'StopSequence'}, \n",
-    "#                             inplace=True)\n",
-    "\n",
-    "# gdf_GTSFseq = dataframe_to_point(df_GTSFseq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")"
+    "                         index=False)\n"
    ]
   }
  ],
